
syntax = "proto3";

package AUTHENTICATION;

import "google/protobuf/timestamp.proto";

service Credentials {
    rpc validateAuthUser(ValidateUserAuthDto ) returns (AuthResponse);
    rpc validateAuthToken(ValidateTokenAuthDto) returns (AuthResponse) ;
    rpc signup(CreateCredentialDto) returns (AuthResponse);
    rpc refreshToken(ValidateTokenAuthDto) returns (AuthResponse);
}

enum AuthUserRole{
  ADMIN =0;
  USER = 1;
}

message AuthUser{
  string Id = 1;
  string password = 2;
  string email = 3;
  bool isActive = 4;
  string role = 5;
  google.protobuf.Timestamp lastLoginAt = 6;

}

message ValidateUserAuthDto{
    string email= 1;
    string password = 2;
}


message ValidateTokenAuthDto{
  string token=1;
}

message CreateCredentialDto {
    string email = 1;
    string password = 2;
    AuthUserRole role = 3;
}

message Tokens {
    string accessToken = 1;
    string refreshToken = 2;
}

message AuthResponse {
    AuthUser user = 1;
    Tokens tokens = 2;
}